// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should contain null message 1`] = `
<Card
  rows={Array []}
>
  <div
    id="container"
    onClick={[Function]}
  >
    <div
      className="null-message"
    >
      Null
    </div>
    <div>
      Show Label
    </div>
  </div>
</Card>
`;

exports[`Card should render correctly as snapshot 1`] = `
<div
  id="container"
  onClick={[Function]}
>
  <div
    className="label"
    key="0"
  >
    123
  </div>
</div>
`;
